--- a/mainapp/templates/test_page.html
+++ b/mainapp/templates/test_page.html
@@ -219,10 +219,10 @@
       <div id="progress-bar" class="progress-inner"></div>
     </div>
     <div id="card"></div>
-    <div class="quick-btns">
+<!--     <div class="quick-btns">
       <button onclick="markAllCorrect()" class="quick-btn">Отметить все как 'Верно'</button>
       <button onclick="markAllIncorrect()" class="quick-btn">Отметить все как 'Неверно'</button>
-    </div>
+    </div> -->
   </div>
 </body>
 </html>
